--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ td
 
 #main-html
 {
-    background-image: url(https://initiate.alphacoders.com/images/119/cropped-1920-1080-1193815.jpg?5885);
+    background-image: url(index-bg.jpg);
     padding: 10px 5%;
     color: #000;
 }
