--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h2
 li
 {
     list-style: none;
+    margin: 10px 0px;
 }
 
 table
@@ -109,6 +110,6 @@ td img
 {
     background-image: url(index-bg.png);
     padding: inherit 5%;
-    color: #AAA;
-    -webkit-text-stroke: 0.7px #000;
+    color: #000;
+    -webkit-text-stroke: 1px #AAA;
 }
