--- a/style.css
+++ b/style.css
@@ -49,10 +49,15 @@ a
     color: #CCC;
 }
 
+img
+{
+    transition: 200ms;
+}
+
 img:hover
 {
     transform: scale(1.1);
-    transition: 100ms;
+    transition: 200ms;
 }
 
 td img
@@ -100,6 +105,7 @@ p img
 
 .header
 {
+    transition: 200ms;
     text-align: left;
     top: 0%;
     left: 0%;
@@ -108,7 +114,7 @@ p img
     min-width: 400px;
     position: absolute;
     position: fixed;
-    background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, .7), rgba(0, 0, 0, .5), rgba(0, 0, 0, .0));
+    background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, .7), rgba(0, 0, 0, .45), rgba(0, 0, 0, .0));
 }
 
 .img-100px
