--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1
     color: white;
     text-align: center;
     font-size: 250%;
+    -webkit-text-stroke: 2px #000;
 }
 
 h2
@@ -56,7 +57,7 @@ img
 
 img:hover
 {
-    transform: scale(1.1);
+    transform: scale(1.05);
     transition: 200ms;
 }
 
@@ -105,7 +106,6 @@ p img
 
 .header
 {
-    transition: 200ms;
     text-align: left;
     top: 0%;
     left: 0%;
