--- a/style.css
+++ b/style.css
@@ -6,23 +6,30 @@ body
     background-attachment: fixed;
     background-size: cover;
     min-width: 375px;
-    background-position: left;
+    background-position: left top;
     margin-right: 50%;
     margin-top: 100px;
     font-weight: 700;
+}
+
+div
+{
+    clear: both;
 }
 
 h1
 {
     color: white;
     text-align: center;
-    font-size: 250%;
-    -webkit-text-stroke: 2px #000;
+    font-size: 2.5em;
+    -webkit-text-stroke: 2.5px #000;
 }
 
 h2
 {
     color: lightgray;
+    -webkit-text-stroke: 1.5px #000;
+    font-size: 1.75em;
 }
 
 li
@@ -50,17 +57,6 @@ a
     color: #CCC;
 }
 
-img
-{
-    transition: 200ms;
-}
-
-img:hover
-{
-    transform: scale(1.05);
-    transition: 200ms;
-}
-
 td img
 {
     width: 100px;
@@ -69,7 +65,7 @@ td img
 p, li
 {
     color: #000;
-    -webkit-text-stroke: 0.55px #FFF;
+    -webkit-text-stroke: 0.8px #FFF;
 }
 
 p img
@@ -90,18 +86,31 @@ p img
 .color-CCC
 {
     color: #CCC;
-    -webkit-text-stroke: 0px;
+    -webkit-text-stroke: 1px #000;
 }
 
-.Characters a
+.characters img
 {
+    transition: 200ms;
+}
+
+.characters img:hover
+{
+    transform: scale(1.05);
+    transition: 200ms;
+}
+
+.characters a
+{
+    width: 20%;
     float: left;
-    margin: 25px 50px;
+    margin: 0px 2.5%;
+    min-width: 300px;
 }
 
-.Characters img
+.characters img
 {
-    width: 300px;
+    width: 100%;
 }
 
 .header
@@ -109,7 +118,8 @@ p img
     text-align: left;
     top: 0%;
     left: 0%;
-    width: 40%;
+    min-width: none;
+    width: 50%;
     padding-right: 60%;
     min-width: 400px;
     position: absolute;
@@ -121,6 +131,30 @@ p img
 {
     width: 100px;
     float: right;
+}
+
+.main-img
+{
+    clear: both;
+    width: 55%;
+    min-width: 350px;
+    float: right;
+    margin: 0px 2%;
+}
+
+.left
+{
+    float: left;
+}
+
+.right
+{
+    float: right;
+}
+
+.width-50
+{
+    width: 50%;
 }
 
 #SM-html
@@ -149,6 +183,7 @@ p img
     margin: 100px 2.5%;
     background-position-x: center;
 }
+
 
 .header img
 {
