--- a/style.css
+++ b/style.css
@@ -192,3 +192,40 @@ p img
     margin-left: 30px;
     float: left;
 }
+
+@media screen and (max-width: 600px)
+{
+    body
+    {
+        font-size: 32px;
+        background-position-x: left;
+    }
+
+    h1
+    {
+        font-size: 2em;
+    }
+
+    p, li, h2, h1
+    {
+        -webkit-text-stroke: 0px;
+        color: #000;
+    }
+
+    .header
+    {
+        width: 100%;
+    }
+
+    .header h2
+    {
+        font-size: 1.5em;
+        color: #FFF;
+    }
+
+    .main-img
+    {
+        float: none;
+        width: 95%;
+    }
+}
