--- a/style.css
+++ b/style.css
@@ -61,11 +61,6 @@ a
     color: #CCC;
 }
 
-hr
-{
-    color: transparent;
-}
-
 p, li
 {
     color: #FFF;
@@ -118,6 +113,7 @@ p img
 .characters img
 {
     width: 100%;
+    padding-bottom: 50px;
 }
 
 
