--- a/style.css
+++ b/style.css
@@ -91,9 +91,9 @@ p img
 .characters a
 {
     width: 17.5%;
-    min-width: 350px;
+    min-width: 300px;
     float: left;
-    margin: 0 50px;
+    margin: 0 3.75%;
     text-align: center;
     transition: 200ms;
 }
@@ -185,7 +185,7 @@ p img
     background-position-x: center;
 }
 
-@media screen and (max-width: 900px)
+@media only screen and (orientation: portrait)
 {
     body
     {
