--- a/style.css
+++ b/style.css
@@ -91,7 +91,6 @@ p img
 .characters a
 {
     width: 17.5%;
-    min-width: 300px;
     float: left;
     margin: 0 3.75%;
     text-align: center;
@@ -191,7 +190,7 @@ p img
     {
         margin: 0 2.5%;
         margin-top: 70px;
-        font-size: 18px;
+        font-size: 15px;
     }
 
     h1
@@ -236,8 +235,9 @@ p img
 
     .characters a
     {
-        width: 60%;
-        margin: 0 20%;
+        width: 65%;
+        clear: both;
+        margin: 0 17.5%;
     }
 
     .characters h2
