--- a/style.css
+++ b/style.css
@@ -188,21 +188,20 @@ p img
 {
     body
     {
+        background-position-x: left;
         margin: 0 2.5%;
         margin-top: 70px;
-        font-size: 15px;
+        font-size: 16px;
     }
 
     h1
     {
-        font-size: 2em;
         -webkit-text-stroke: 0px;
         color: #999;
     }
 
     h2
     {
-        font-size: 1.5em;
         -webkit-text-stroke: 0px;
     }
 
@@ -213,7 +212,7 @@ p img
 
     p img
     {
-        width: 75px;
+        width: 40px;
     }
 
     .header
@@ -243,6 +242,11 @@ p img
     .characters h2
     {
         font-size: 2.5em;
+    }
+
+    .characters img
+    {
+        padding-bottom: 0px;
     }
 
     #main-html
