--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ p img
     background-position-x: center;
 }
 
-@media only screen and (orientation: portrait)
+@media only screen and (max-width: 600px)
 {
     body
     {
