--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body
     background-attachment: fixed;
     background-size: cover;
     background-position: right top;
-    margin: 75px 50% 0 0;
+    margin: 75px 50% 0 2.5%;
     font-weight: 1000;
 }
 
@@ -95,6 +95,7 @@ p img
     margin: 0 3.75%;
     text-align: center;
     transition: 200ms;
+    min-width: 250px;
 }
 
 .characters a:hover
@@ -129,7 +130,7 @@ p img
     width: 100%;
     position: absolute;
     position: fixed;
-    background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, .7), rgba(0, 0, 0, .45), rgba(0, 0, 0, .0));
+    background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, .7) 40%, rgba(0, 0, 0, .5) 65%, rgba(0, 0, 0, 0));
 }
 
 .header img
@@ -189,8 +190,7 @@ p img
     body
     {
         background-position-x: left;
-        margin: 0 2.5%;
-        margin-top: 70px;
+        margin: 75px 2.5%;
         font-size: 16px;
     }
 
@@ -218,11 +218,12 @@ p img
     .header
     {
         width: 100%;
+        height: 70px;
     }
 
     .header a
     {
-        margin-left: 20px;
+        margin:  -10px 20px;
     }
 
     .header h2
@@ -252,7 +253,7 @@ p img
     {
         width: 65%;
         clear: both;
-        margin: 0 17.5%;
+        margin: -30px 17.5%;
     }
 
     .characters h2
@@ -262,7 +263,7 @@ p img
 
     .characters img
     {
-        padding-bottom: 0px;
+        margin-top: -40px;
     }
 
     #main-html
@@ -270,6 +271,7 @@ p img
         background-image: linear-gradient(90deg, rgb(50, 50, 50), rgb(85,85,85), rgb(110,110,110));
         background-repeat: repeat-y;
         background-size: contain;
+        margin: 75px 2.5%;
     }
 
     #main-html h1
