index-bg hivatkozásra cserélése

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ p img
 
 #main-html
 {
-    background-image: url(index-bg.png);
+    background-image: url(https://images6.alphacoders.com/113/1137283.png);
     margin: 100px 2.5%;
     background-position-x: center;
 }
